# rpg_svo_pro_open

./: Dockerfile  README.md  dependencies.yaml
rpg_common/: CMakeLists.txt  package.xml
rpg_common/include/rpg_common/: aligned.h  batch_worker.h  callback_host.h  eigen_hash.h  eigen_type.h  fs.h  pose.h  realtime_worker.h  threadsafe_queue.h  timer.h  worker_base.h
rpg_common/src/: fs.cpp
svo/: .gitignore  CMakeLists.txt  package.xml
svo/include/svo/: abstract_bundle_adjustment.h  frame_handler_array.h  frame_handler_base.h  frame_handler_mono.h  frame_handler_stereo.h  global.h  imu_handler.h  initialization.h  io.h  map.h  pose_optimizer.h  reprojector.h  stereo_triangulation.h  svo.h
svo/src/: frame_handler_array.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  frame_handler_stereo.cpp  imu_handler.cpp  initialization.cpp  io.cpp  map.cpp  pose_optimizer.cpp  reprojector.cpp  stereo_triangulation.cpp
svo/test/: test_frame.cpp
svo_benchmarking/: CMakeLists.txt  README.md  evaluation_tools.md  package.xml  setup.py
svo_benchmarking/analzye_traj_cfg/: exp_euroc_vio.yaml  exp_euroc_vio_lc.yaml  exp_gm_euroc_all.yaml
svo_benchmarking/dataset_tools/: .gitignore  README.md  generate_ground_truth.sh  prepare_dataset_monocular.sh  prepare_dataset_stereo.sh
svo_benchmarking/dataset_tools/handeye_tfs/: handeye_davis.yaml  handeye_visensor.yaml  handeye_visensor_1903.yaml
svo_benchmarking/dataset_tools/python/: asl_groundtruth_to_pose.py  bag_to_image.py  bag_to_imu.py  bag_to_pose.py  change_image_path.py  combine_images.py  prepend_id.py  restamp_bag.py  strip_gt_id.py  swap_stamped_imu_meas.py  transform_trajectory.py
svo_benchmarking/experiments/: exp_euroc_lc.yaml  exp_euroc_lc_stereo.yaml  exp_euroc_nolc.yaml  exp_euroc_nolc_stereo.yaml  exp_global_map.yaml
svo_benchmarking/scripts/: analyze_all_euroc.sh  analyze_imu_integration_dynamic.py  analyze_imu_integration_static.py  analyze_imu_properties_static.py  analyze_lc_timing.py  analyze_vio_timing.py  benchmark.py  compute_hand_eye_transformation.py  convert_old_fmt.py  evaluate.py  evaluate_all.py  organize_results.py  organize_results_mul.py  ros_node.py
svo_benchmarking/scripts/bag_eval_scripts/: analyze_stationary.py  cal_traj_len.py
svo_benchmarking/src/svo_ceres_benchmarking/: dataset_loading.py  hand_eye_calib.py  results_loading.py  tfs_utils.py  tracefile_reader.py  trajectory_loading.py  trajectory_plotting.py  trajectory_utils.py
svo_ceres_backend/: CMakeLists.txt  package.xml
svo_ceres_backend/include/svo/: ceres_backend_interface.hpp  ceres_backend_publisher.hpp  (+2 more)
svo_ceres_backend/src/: ceres_backend_interface.cpp  ceres_backend_publisher.cpp  error_interface.cpp  estimator.cpp  homogeneous_point_error.cpp  homogeneous_point_local_parameterization.cpp  homogeneous_point_parameter_block.cpp  imu_error.cpp  local_parameterization_additional_interfaces.cpp  map.cpp  map_alignment.cpp  marginalization_error.cpp  motion_detector.cpp  outlier_rejection.cpp  pose_error.cpp  pose_local_parameterization.cpp  pose_parameter_block.cpp  relative_pose_error.cpp  speed_and_bias_error.cpp  speed_and_bias_parameter_block.cpp
svo_ceres_backend/test/: test_backend_id.cpp  test_estimator.cpp  test_homogeneous_point_error.cpp  test_imu_error.cpp  test_map.cpp  test_marginalization.cpp  test_pose_error.cpp  test_pose_local_parameterization.cpp  test_relative_pose_error.cpp  test_reprojection_error.cpp  test_speed_and_bias_error.cpp
svo_cmake/: CMakeLists.txt  package.xml
svo_cmake/cmake/: svo_cmake-extras.cmake.develspace.in  svo_cmake-extras.cmake.installspace.in
svo_common/: CMakeLists.txt  package.xml
svo_common/src/: frame.cpp  point.cpp
svo_common/test/: test_container_helpers.cpp  test_feature_wrapper.cpp  test_main.cpp
svo_direct/: CMakeLists.txt  package.xml
svo_direct/src/: depth_estimation.cpp  depth_filter.cpp  elder_zucker.cpp  feature_alignment.cpp  feature_detection.cpp  feature_detection_utils.cpp  matcher.cpp  patch_warp.cpp
svo_direct/test/: test_depth_estimation.cpp  test_edgelet_direction.cpp  test_edgelet_extraction.cpp  test_feature_alignment.cpp  test_feature_detection.cpp  test_patch_score.cpp  test_utils.h
svo_global_map/: CMakeLists.txt  package.xml
svo_global_map/src/: global_map.cpp  null_stream.cpp
svo_img_align/: CMakeLists.txt  package.xml
svo_img_align/src/: frame_gpu.cpp  sparse_img_align.cpp  sparse_img_align_base.cpp  sparse_img_align_device_utils.cu  sparse_img_align_gpu.cpp
svo_online_loopclosing/: CMakeLists.txt  package.xml
svo_online_loopclosing/src/: bow.cpp  geometric_verification.cpp  loop_closing.cpp  map_alignment.cpp  read_file.cpp
svo_online_loopclosing/test/: createvoc.cpp
svo_online_loopclosing/vocabularies/: .gitignore  download_voc.sh
svo_pgo/: CMakeLists.txt  package.xml
svo_pgo/src/: pgo.cpp
svo_pgo/test/: test.cpp
svo_ros/: CMakeLists.txt  package.xml  rviz_config.rviz  rviz_config_gm.rviz  rviz_config_vio.rviz  svo_nodelet.xml
svo_ros/launch/: euroc_global_map_mono.launch  euroc_vio_mono.launch  euroc_vio_stereo.launch  live_nodelet.launch  t265_vio_stereo.launch
svo_ros/param/: backend.yaml  davis.yaml  fisheye.yaml  global_map.yaml  pinhole.yaml  t265_custom.yaml  vio_mono.yaml  vio_stereo.yaml
svo_ros/scripts/: kalibr_to_svo.py  omni_matlab_to_rpg.py
svo_ros/src/: backend_factory.cpp  backend_visualizer.cpp  benchmark_node.cpp  ceres_backend_factory.cpp  csv_dataset_reader.cpp  svo_factory.cpp  svo_interface.cpp  svo_node.cpp  svo_node_base.cpp  svo_nodelet.cpp  visualizer.cpp
svo_test_utils/: CMakeLists.txt  package.xml
svo_test_utils/src/: imu_simulation.cpp  point_cloud_generator.cpp  simple_raytracer.cpp  synthetic_dataset.cpp  test_utils.cpp  trajectory_generator.cpp
svo_tracker/: CMakeLists.txt  package.xml
svo_tracker/src/: feature_tracker.cpp  feature_tracking_types.cpp  feature_tracking_utils.cpp  feature_tracking_viz.cpp
svo_vio_common/: CMakeLists.txt  package.xml
svo_vio_common/src/: test_utils.cpp  vio_common.cpp
vikit/vikit_cameras/: CMakeLists.txt  package.xml
(+245 files in other folders)
