<?xml version="1.0"?>
<package format="2">
  <name>svo</name>
  <version>0.1.0</version>
  <description>
    Monocular Visual Odometry
  </description>
  <author>Christian Forster</author>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend> <!-- for FindEigen.cmake -->
  <depend>svo_cmake</depend>
  <depend>svo_common</depend>
  <depend>svo_direct</depend>
  <depend>svo_tracker</depend>
  <depend>svo_test_utils</depend>
  <depend>svo_img_align</depend>
  <depend>svo_online_loopclosing</depend>
  <depend>svo_global_map</depend>
  <depend>svo_vio_common</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rpg_common</depend>
  <depend>vikit_common</depend>
  <depend>vikit_cameras</depend>
  <depend>vikit_solver</depend>
  <depend>vikit_ros</depend>
  <depend>eigen_catkin</depend>
  <depend>minkindr</depend>
  <depend>fast</depend>
  <depend>opengv</depend>
  <depend>cv_bridge</depend>
  <depend>glog_catkin</depend>
  
</package>
