<?xml version="1.0"?>
<package format="2">
  <name>svo_ceres_backend</name>
  <version>0.1.4</version>
  <description>
    svo_ceres_backend
  </description>
  <maintainer email="jhuber91@gmail.com">Jonathan Huber</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>ceres_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>

  <depend>svo_vio_common</depend>
  <depend>svo_common</depend>
  <depend>svo</depend>
  <depend>pcl_ros</depend>
</package>
