<?xml version="1.0"?>
<package format="2">
  <name>svo_common</name>
  <description>
    SVO common module for types and common base functionality used by other modules
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <author>Christian Forster</author>
  <author>Manuel Werlberger</author>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>svo_cmake</depend>
  <depend>vikit_common</depend>
  <depend>vikit_cameras</depend>
  <depend>fast</depend>

  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>

  <test_depend>gtest</test_depend>
  <depend>eigen_checks</depend>
</package>
