<?xml version="1.0"?>
<package format="2">
  <name>svo_img_align</name>
  <description>
    SVO image align module used for direct image alignment
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <author>Christian Forster</author>
  <author>Manuel Werlberger</author>
  <author>Michael Gassner</author>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>svo_cmake</depend>
  <depend>svo_common</depend>
  <depend>svo_direct</depend>
  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>vikit_solver</depend>
  <depend>vikit_ros</depend>

  <test_depend>gtest</test_depend>
  <depend>eigen_checks</depend>
</package>
