<?xml version="1.0"?>
<package format="2">
  <name>svo_online_loopclosing</name>
  <version>0.0.1</version>
  <description>The svo_online_loopclosing package</description>
  <author>Kunal Shrivastava</author>
  <maintainer email="kunalshrivastava.iitr@gmail.com">kunal71091</maintainer>

  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>svo_cmake</depend>
  <depend>svo_common</depend>
  <depend>rpg_common</depend>
  <depend>eigen_catkin</depend>
  <depend>dbow2_catkin</depend>
  <depend>cv_bridge</depend>
  <depend>svo_pgo</depend>
  <depend>opengv</depend>

</package>
