<?xml version="1.0"?>
<package format="2">
  <name>svo_pgo</name>
  <version>0.0.1</version>
  <description>The pose graph optimisation package</description>
  <author>Kunal Shrivastava</author>
  <maintainer email="kunalshrivastava.iitr@gmail.com">kunal71091</maintainer>

  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>svo_cmake</depend>
  <depend>svo_common</depend>
  <depend>eigen_catkin</depend>
  <depend>ceres_catkin</depend>
  <depend>cv_bridge</depend>
  

</package>
