<?xml version="1.0"?>
<package format="2">
  <name>svo_tracker</name>
  <description>
    SVO tracking module.
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <author>Christian Forster</author>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roslib</depend>
  <depend>glog_catkin</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_catkin</depend>
  <depend>svo_common</depend>
  <depend>svo_direct</depend>
  <depend>svo_test_utils</depend>
  
  <test_depend>gtest</test_depend>
</package>
