<?xml version="1.0"?>
<package format="2">
  <name>svo_vio_common</name>
  <version>0.1.4</version>
  <description>
    Common types and utilities for ceres backend.
  </description>
  <maintainer email="jhuber91@gmail.com">Jonathan Huber</maintainer>
  <license>ZE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>minkindr</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>svo_common</depend>


  <test_depend>gtest</test_depend>
</package>
